--- a/style.css
+++ b/style.css
@@ -1,24 +1,85 @@
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:-Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,Arial, Helvetica, sans-serif;
 }
 
  header {
   /*background-color: #1f2937;*/
   padding: 10px 115px 115px 115px;
+  margin-bottom: 20px;
+  background-color: #1f2937;
 } 
 
 .header-links-logo{
     display: flex;
+    margin-bottom: 50px;
 
+}
+.header-links-logo:nth-child(1){
+    font-size: 24px;
+    color:#f9faf8 ;
+}
+.header-title-image{
+    display: flex;
+    justify-content: space-between;
+    
+}
+#image-holder{
+    color:white ;
+    width: 1000px;
+    background-color: gray;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
 }
 .links{
     display: flex;
     /* justify-content: flex-end; */
     margin-left: auto;
     list-style: none;
+    font-size: 18px;
+    color: #e5e7eb;
 }
 a:link{
     text-decoration: none;
+    color: #e5e7eb;
+    margin-left: 20px;
+}
+.header-image {
+    width: 800px;
+    
+}
+.title{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+
+}
+.main-title{
+    text-align: center;
+    margin-bottom: 10px;
+}
+.main-list li{
+    /* border:2px solid blue; */
+    width:150px;
+    height: 150px;
+}
+.main-list{
+    display: flex;
+}
+.secondary-text{
+    font-size: 24px;
+    color: #e5e7eb;
+}
+button{
+    font-size: 20px;
+    color: white;
+    background-color:#3882f6 ;
+    padding: 3px 10px;
+    border-radius: 10px;
 }
